# nttdata_regulatory_reporting_system

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG_STORAGE.md  COMPLETE_FILE_STATUS.md  COMPLETE_INVENTORY.md  CREATE_SHADCN_COMPONENTS.md  FILES_CREATED.md  FINAL_STATUS.md  FRONTEND_FILES_CREATED.md  PROJECT_STRUCTURE.md  README.md  STORAGE_MIGRATION.md  check_missing.py  check_missing_files.sh  create_all_files.py  create_project_structure.sh
backend/: .env.example  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  exceptions.py  llm_client.py  logging.py  rbac.py  security.py
backend/app/db/: __init__.py  base.py  chroma_db.py  postgres.py
backend/app/models/: __init__.py  audit_log.py  cache.py  data_mapping.py  file_metadata.py  generated_code.py  permission.py  rate_limit.py  regulatory_update.py  report.py  requirement.py  role.py  session.py  task_queue.py  test_case.py  user.py  workflow.py
backend/app/schemas/: __init__.py  agent.py  auth.py  code.py  data_mapping.py  permission.py  regulatory_update.py  report.py  requirement.py  role.py  user.py  workflow.py
backend/app/services/: audit_service.py  auth_service.py  code_generation_service.py  (+11 more)
backend/migrations/: 001_initial_schema.sql  002_add_workflow_priority.sql  README.md
backend/scripts/: __init__.py  create_admin.py  generate_schema_sql.py  seed_data.py  setup_storage.py
backend/tests/: conftest.py
(+161 files in other folders)
